--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "owca"]
-	path = prm/owca
-	url = https://github.com/intel/owca
+[submodule "wca"]
+	path = prm/workload-collocation-agent
+	url = https://github.com/intel/workload-collocation-agent
