--- a/prm/Makefile
+++ b/prm/Makefile
@@ -18,9 +18,9 @@ unit:
 
 package: 
 	@echo Building wca-pex file.
-	-rm dist/wca-prm.pex
-	-rm .pex-build/wca*
-	-rm .pex-build/prm*
+	-rm -f dist/wca-prm.pex
+	-rm -f .pex-build/wca*
+	-rm -f .pex-build/prm*
 	-rm -rf prm.egg-info/
 	pipenv run env PYTHONPATH=. pex . wca -v --cache-dir=.pex-build --output=dist/wca-prm.pex -m wca.main:main
 	./dist/wca-prm.pex --version
