--- a/prm/Makefile
+++ b/prm/Makefile
@@ -22,7 +22,7 @@ package:
 	-rm -f .pex-build/wca*
 	-rm -f .pex-build/prm*
 	-rm -rf prm.egg-info/
-	pipenv run env PYTHONPATH=. pex . wca -v --cache-dir=.pex-build --output=dist/wca-prm.pex -m wca.main:main
+	pipenv run env PYTHONPATH=. pex . workload-collocation-agent -v --cache-dir=.pex-build --output=dist/wca-prm.pex -m wca.main:main
 	./dist/wca-prm.pex --version
 
 check: flake8 unit
