--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     }
     agent { label 'kubernetes' }
     environment {
-        PLAYBOOK='prm/wca/workloads/run_workloads.yaml'
+        PLAYBOOK='prm/workload-collocation-agent/workloads/run_workloads.yaml'
         INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
         LLC_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
         MEMBW_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
@@ -162,7 +162,7 @@ pipeline {
                 echo 'Restart wca...'
                 sh 'sudo systemctl status wca'
 
-                dir('prm/wca/workloads'){
+                dir('prm/workload-collocation-agent/workloads'){
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
                     sleep BASELINE_SLEEP
