--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -12,6 +12,7 @@ pipeline {
         BASELINE_SLEEP = 40
         CONTENDER_SLEEP = 40
         BUILD_COMMIT = "${GIT_COMMIT}"
+        CERT_PATH = "/etc/kubernetes/ssl/"
 	EXTRA_ANSIBLE_PARAMS = ""
     }
     options {
@@ -65,7 +66,8 @@ pipeline {
                             configs: [
                                 fileContentReplaceItemConfig( search: 'BUILD_COMMIT', replace: "${GIT_COMMIT}", matchCount: 0),
                                 fileContentReplaceItemConfig( search: 'BUILD_NUMBER', replace: "${BUILD_NUMBER}", matchCount: 0),
-                                fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0)
+                                fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0),
+                                fileContentReplaceItemConfig( search: 'CERT_PATH', replace: "${CERT_PATH}", matchCount: 0)
                             ],
                             fileEncoding: 'UTF-8', 
                             filePath: "${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp")
