Kubernetes environment variables

--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -8,7 +8,8 @@ pipeline {
         INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
         LLC_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
         MEMBW_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
-        PROMETHEUS='http://100.64.176.12:9090' 
+        PROMETHEUS='http://100.64.176.12:9090'
+        KUBERNETES_MASTER_HOST='100.64.176.33'
         BASELINE_SLEEP = 40
         CONTENDER_SLEEP = 40
         BUILD_COMMIT = "${GIT_COMMIT}"
@@ -51,7 +52,7 @@ pipeline {
         stage("Run LLC experiment") {
             when { expression { return params.LLC } }
             environment {
-                MESOS_EXPECTED_TASKS = -1
+                KUBERNETES_EXPECTED_TASKS = -1
                 MIN_RECALL = -1
                 MIN_PRECISION = -1
                 BUILD_SCENARIO = "llc"
