--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -23,6 +23,7 @@ pipeline {
     parameters {
         booleanParam(name: 'BUILD_PEX', defaultValue: true, description: 'Build wca-pex')
         booleanParam(name: 'LLC', defaultValue: true, description: 'Run LLC experiment')
+        booleanParam(name: 'BUILD_LLC_MODEL', defaultValue: false, description: 'Build Model For LLC Contention')
         booleanParam(name: 'MB', defaultValue: true, description: 'Run MBW experiment')
     }
     stages {
