--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -134,14 +134,15 @@ pipeline {
             steps {
 
                 echo 'Reconfigure wca...'
-		sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
+		        sh 'sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config_kubernetes.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
                             configs: [
                                 fileContentReplaceItemConfig( search: 'BUILD_COMMIT', replace: "${GIT_COMMIT}", matchCount: 0),
                                 fileContentReplaceItemConfig( search: 'BUILD_NUMBER', replace: "${BUILD_NUMBER}", matchCount: 0),
-                                fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0)
+                                fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0),
+                                fileContentReplaceItemConfig( search: 'CERT_PATH', replace: "${CERT_PATH}", matchCount: 0)
                             ],
                             fileEncoding: 'UTF-8', 
                             filePath: "${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp")
