Sleep variable fix

--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -10,8 +10,11 @@ pipeline {
         MEMBW_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
         PROMETHEUS='http://100.64.176.12:9090'
         KUBERNETES_HOST='100.64.176.34'
-        BASELINE_SLEEP = 40
-        CONTENDER_SLEEP = 40
+        LLC_BASELINE_SLEEP = 180
+        LLC_COLLECT_SLEEP = 36000
+        LLC_CONTENDER_SLEEP = 180
+        MBW_BASELINE_SLEEP = 5
+        MBW_CONTENDER_SLEEP = 5
         BUILD_COMMIT = "${GIT_COMMIT}"
         CRT_PATH = "/etc/kubernetes/ssl/"
 	EXTRA_ANSIBLE_PARAMS = ""
@@ -161,7 +164,7 @@ pipeline {
                 dir('prm/workload-collocation-agent/workloads'){
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_train,cassandra_stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    sleep BASELINE_SLEEP
+                    sleep MBW_BASELINE_SLEEP
                     echo 'Start contender workload.'
                     sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep MBW_CONTENDER_SLEEP
