--- a/prm/demo_scenarios/common/wca_config_kubernetes.yml
+++ b/prm/demo_scenarios/common/wca_config_kubernetes.yml
@@ -13,13 +13,11 @@ runner: !DetectionRunner
     brokers_ips: ['100.64.176.12:9092']
     topic: "wca_anomalies"
     max_timeout_in_seconds: 5.
-  detector: !ContentionDetector
-    action_delay: 10
-    mode_config: detect
+  detector: !ExampleDetector
 
   extra_labels:
-    env_uniq_id: "14"
-    own_ip: "100.64.176.14"
+    env_uniq_id: "34"
+    own_ip: "100.64.176.34"
     build_commit: "BUILD_COMMIT"
     build_number: "BUILD_NUMBER"
     build_scenario: "BUILD_SCENARIO"
