--- a/prm/demo_scenarios/common/inventory-kubernetes.yaml
+++ b/prm/demo_scenarios/common/inventory-kubernetes.yaml
@@ -3,6 +3,7 @@ application_hosts:
     100.64.176.34:
       env_uniq_id: 34
       load_generator_host_ip: 100.64.176.34
+      orchestrator: Kubernetes
   vars:
     ansible_connection: local
     cluster: example
