--- a/prm/demo_scenarios/common/inventory-kubernetes.yaml
+++ b/prm/demo_scenarios/common/inventory-kubernetes.yaml
@@ -4,6 +4,7 @@ application_hosts:
       env_uniq_id: 34
       load_generator_host_ip: 100.64.176.34
       orchestrator: Kubernetes
+      k8s_namespace: default
   vars:
     ansible_connection: local
     cluster: example
