--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -55,7 +55,7 @@ pipeline {
             }
             steps {
                 echo 'Reconfigure wca...'
-		        sh 'sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config_kubernetes.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
+		        sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config_kubernetes.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
