Replace systemd file

--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -56,6 +56,8 @@ pipeline {
             steps {
                 echo 'Reconfigure wca...'
 		        sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config_kubernetes.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
+		        sh 'sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca.service /etc/systemd/system/wca.service'
+		        sh 'sudo sudo systemctl daemon-reload'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
@@ -138,6 +140,8 @@ pipeline {
 
                 echo 'Reconfigure wca...'
 		        sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config_kubernetes.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
+		        sh 'sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca.service /etc/systemd/system/wca.service'
+		        sh 'sudo sudo systemctl daemon-reload'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
