--- a/prm/demo_scenarios/common/wca.service
+++ b/prm/demo_scenarios/common/wca.service
@@ -2,7 +2,7 @@
 Description=wca
 
 [Service]
-ExecStart=/usr/bin/wca.pex --config /etc/wca/wca_config.yml -l debug -r prm.detector:ContentionDetector
+ExecStart=/usr/bin/wca.pex --config /etc/wca/wca_config.yml -l debug -r prm.detector:ContentionDetector --root
 Restart=no
 LimitNOFILE=500000
 # CAP_DAC_OVERRIDE allows to remove resctrl groups and CAP_SETUID allows to change effective uid to add tasks to the groups
@@ -10,7 +10,7 @@ CapabilityBoundingSet=CAP_DAC_OVERRIDE CAP_SETUID
 AmbientCapabilities=CAP_DAC_OVERRIDE CAP_SETUID
 # We must avoid dropping capabilities after changing effective uid from root to wca
 SecureBits=no-setuid-fixup
-User=wca
+User=root
 Group=wca
 WorkingDirectory=/var/lib/wca
 RestartSec=5
