--- a/prm/demo_scenarios/common/wca.service
+++ b/prm/demo_scenarios/common/wca.service
@@ -10,7 +10,7 @@ CapabilityBoundingSet=CAP_DAC_OVERRIDE CAP_SETUID
 AmbientCapabilities=CAP_DAC_OVERRIDE CAP_SETUID
 # We must avoid dropping capabilities after changing effective uid from root to wca
 SecureBits=no-setuid-fixup
-User=root
+User=wca
 Group=wca
 WorkingDirectory=/var/lib/wca
 RestartSec=5
