--- a/prm/demo_scenarios/common/wca_config.yml
+++ b/prm/demo_scenarios/common/wca_config.yml
@@ -12,8 +12,10 @@ runner: !DetectionRunner
     topic: "wca_anomalies"
     max_timeout_in_seconds: 5.
   detector: !ContentionDetector
+    database:
+      db_type: local
+      host: ~
     action_delay: 10.
-    mode_config: detect
     
   extra_labels:
     env_uniq_id: "14"
