--- a/prm/demo_scenarios/common/wca_config.yml
+++ b/prm/demo_scenarios/common/wca_config.yml
@@ -12,7 +12,7 @@ runner: !DetectionRunner
     topic: "wca_anomalies"
     max_timeout_in_seconds: 5.
   detector: !ContentionDetector
-    database:
+    database: !ModelDatabase
       db_type: local
       host: ~
     action_delay: 10.
